@@ -61,11 +61,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
    Jira: https://issues.apache.org/jira/browse/TS-1109
    +1: zym, zwoop, igalic
 
-  *) Make RC script support Amazon EC2 Linux AMI
-   master SHA: 620d3cc783c330da00cdbe11eb72eddd1e7aff30
-   Jira: https://issues.apache.org/jira/browse/TS-1098
-   +1: briang,zwoop, igalic
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
